@@ -39,6 +39,8 @@
         Always show a vertical scrollbar.
     @style{wxLB_NEEDED_SB}
         Only create a vertical scrollbar if needed.
+    @style{wxLB_NO_SB}
+        Don't create vertical scrollbar (wxMSW only).
     @style{wxLB_SORT}
         The listbox contents are sorted in alphabetical order.
     @endStyleTable
